# trade-algo-experiments

./: pyproject.toml
smoothing-moving-averages/: main.ipynb
