[tool.poetry]
name = "trade-algo-experiments"
version = "0.1.0"
description = ""
authors = ["nth-commit <mfrywhite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
finta = "^1.3"
ipykernel = "^6.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
